[workspace]
members = ["filesystem", "game", "net", "util"]
resolver = "2"

[workspace.package]
authors = ["Tom LeGodais <tomlegodais@gmail.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }