[workspace]
members = ["filesystem", "game", "net", "util"]
resolver = "2"

[workspace.package]
authors = ["Tom LeGodais <tomlegodais@gmail.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
config = { version = "0.15", features = ["toml"] }
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"