[package]
authors.workspace = true
edition.workspace = true
name = "game"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
filesystem = { path = "../filesystem" }
inventory = "0.3"
macros = { path = "../macros" }
net = { path = "../net" }
num_enum = { workspace = true }
once_cell = { workspace = true }
parking_lot = { version = "0.12.5", features = ["send_guard"] }
persistence = { path = "../persistence" }
rand = { workspace = true }
serde = { workspace = true }
shaku = { workspace = true }
slab = "0.4.12"
strum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
util = { path = "../util" }

[lints.rust]
dead_code = "allow"
