[package]
name = "net"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = "2"
filesystem = { path = "../filesystem" }
futures-util = { version = "0.3", features = ["sink"] }
num_enum = { workspace = true }
rand = "0.9"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
util = { path = "../util" }