[package]
authors.workspace = true
edition.workspace = true
name = "tools"
version = "0.1.0"

[[bin]]
name = "wiki-item"
path = "src/wikiitem.rs"

[[bin]]
name = "wiki-npc"
path = "src/wikinpc.rs"

[[bin]]
name = "seed-bank"
path = "src/seedbank.rs"

[dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
